feat: start clash and safeeye on startup

--- a/UserConfigs/Startup_Apps.conf
+++ b/UserConfigs/Startup_Apps.conf
@@ -32,7 +32,7 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 # Rainbow borders
-exec-once = $UserScripts/RainbowBorders.sh &
+#exec-once = $UserScripts/RainbowBorders.sh &
 
 # Starting hypridle to start hyprlock
 exec-once = hypridle &
@@ -51,5 +51,5 @@ exec-once = hypridle &
 
 # For the input method
 exec-once = fcitx5 -d
-exec-once = rsibreak
-exec-once = /home/hexiongjun/SW/Clash.for.Windows-0.20.8-x64-linux/cfw --no-sandbox 
+exec-once = safeeye
+exec-once = $HOME/SW/Clash.for.Windows-0.20.8-x64-linux/cfw --no-sandbox
