feat: fullfill move window to other monitor function keybinding

--- a/UserConfigs/UserKeybinds.conf
+++ b/UserConfigs/UserKeybinds.conf
@@ -21,6 +21,30 @@ bind = $mainMod, A, exec, pkill rofi || true && ags -t 'overview'
 bind = $mainMod, Return, exec, $term  # Launch terminal
 bind = $mainMod, E, exec, $files # Launch file manager
 
+#Ref:
+#   https://gist.github.com/pschmitt/1cafdb733418c620e8fa3c0026c00837
+#   https://github.com/Andrey0189/hyprland-rice/blob/main/config/hypr/hyprland.conf
+#bind = $mainMod,  [ exec, hyprctl dispatch focusmonitor, +1
+# Move window to next workspace/monitor
+#bind = $mainMod CTRL, bracketleft,    movewindow,   mon:-1
+bind = $mainMod, bracketleft,   movewindow,   mon:-1
+bind = $mainMod, bracketleft,   focusmonitor, -1
+# Ref: https://wiki.hyprland.org/Configuring/Dispatchers/#list-of-dispatchers
+# direction, 0 - 3:
+#   bottom left - 0, bottom right - 1, top right - 2, top left - 3
+bind = $mainMod, bracketleft,   movecursortocorner, 1
+bind = $mainMod, bracketleft, movefocus, l
+
+#bind = $mainMod CTRL, bracketright,  movewindow,   mon:+1
+bind = $mainMod, bracketright,  movewindow,   mon:+1
+bind = $mainMod, bracketright,  focusmonitor, +1
+#bind = $mainMod, bracketright,   movecursortocorner, 0
+bind = $mainMod, bracketright, movefocus, r
+
+#bind = $mod SHIFT, down,  movecursortocorner, 3
+#bind = $mod SHIFT, left,  movetoworkspacesilent, -1
+#bind = $mod SHIFT, right, movetoworkspacesilent, +1
+
 bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # calculator (qalculate)
 
 # pyprland
