--- a/UserConfigs/UserSettings.conf
+++ b/UserConfigs/UserSettings.conf
@@ -1,6 +1,6 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # User Settings
-# This is where you put your own settings as this will not be touched during update 
+# This is where you put your own settings as this will not be touched during update
 # if the upgrade.sh is used.
 
 # refer to Hyprland wiki for more info https://wiki.hyprland.org/Configuring/Variables
@@ -30,7 +30,7 @@ general {
   gaps_out = 8
   border_size = 2
   resize_on_border = true
-   
+
   col.active_border = $color0 $color2 $color9 $color12 $color15 90deg
   col.inactive_border = $backgroundCol
 
@@ -47,7 +47,7 @@ group {
 
 decoration {
   rounding = 10
-         
+
   active_opacity = 1.0
   inactive_opacity = 0.9
   fullscreen_opacity = 1.0
@@ -63,7 +63,7 @@ decoration {
   col.shadow_inactive = 0x50000000
 
   blur {
-  enabled = true	
+  enabled = false
   size = 6
   passes = 2
   ignore_opacity = true
@@ -71,7 +71,7 @@ decoration {
   special = true
   }
 }
-    
+
 animations {
   enabled = yes
 
@@ -79,13 +79,13 @@ animations {
   bezier = winIn, 0.1, 1.1, 0.1, 1.1
   bezier = winOut, 0.3, -0.3, 0, 1
   bezier = liner, 1, 1, 1, 1
-  
+
   animation = windows, 1, 6, wind, slide
   animation = windowsIn, 1, 6, winIn, slide
   animation = windowsOut, 1, 5, winOut, slide
   animation = windowsMove, 1, 5, wind, slide
   animation = border, 1, 1, liner
-  animation = borderangle, 1, 180, liner, loop #used by rainbow borders and rotating colors
+  #animation = borderangle, 1, 180, liner, loop #used by rainbow borders and rotating colors
   animation = fade, 1, 10, default
   animation = workspaces, 1, 5, wind
 }
@@ -105,7 +105,7 @@ input {
 
   touchpad {
     disable_while_typing=true
-    natural_scroll=false 
+    natural_scroll=false
     clickfinger_behavior=false
     middle_button_emulation=true
     tap-to-click=true
@@ -120,7 +120,7 @@ gestures {
   workspace_swipe_invert=true
   workspace_swipe_min_speed_to_force=30
   workspace_swipe_cancel_ratio=0.5
-  workspace_swipe_create_new=true 
+  workspace_swipe_create_new=true
   workspace_swipe_forever=true
 }
 
