feat: let fcitx 5 configuration GUI to float, asign some default workspace for app(Edge etc)

--- a/UserConfigs/WindowRules.conf
+++ b/UserConfigs/WindowRules.conf
@@ -22,9 +22,10 @@ windowrulev2 = idleinhibit fullscreen, title:^(*)$
 windowrulev2 = idleinhibit fullscreen, fullscreen:1
 
 # windowrule v2 move to workspace
-windowrulev2 = workspace 1, class:^([Tt]hunderbird)$
-windowrulev2 = workspace 2, class:^([Ff]irefox|org.mozilla.firefox|[Ff]irefox-esr)$
-windowrulev2 = workspace 2, class:^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable)?)$
+windowrulev2 = workspace 1, class:^([Tt]erminator)$
+windowrulev2 = workspace 3, class:^([Tt]hunderbird)$
+#windowrulev2 = workspace 4, class:^([Ff]irefox|org.mozilla.firefox|[Ee]dge|[Ff]irefox-esr)$
+windowrulev2 = workspace 4, class:^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable)?)$
 #windowrulev2 = workspace 3, class:^([Tt]hunar)$
 windowrulev2 = workspace 4, class:^(com.obsproject.Studio)$
 windowrulev2 = workspace 5, class:^([Ss]team)$
@@ -40,7 +41,10 @@ windowrulev2 = workspace 6 silent, class:^(virt-manager)$
 windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
 
 # windowrule v2 - float
-windowrulev2 = float, class:^(org.kde.polkit-kde-authentication-agent-1)$ 
+# Get class from hyprctl clients
+windowrulev2 = float, class:^(org.fcitx.fcitx5-config-qt)$
+windowrulev2 = float, class:^(.*)(org.fcitx.fcitx5-)(.*)$
+windowrulev2 = float, class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = float, class:([Zz]oom|onedriver|onedriver-launcher)$
 windowrulev2 = float, class:([Tt]hunar), title:(File Operation Progress)
 windowrulev2 = float, class:([Tt]hunar), title:(Confirm to replace files)
