feat: add win+T to list-search-swith to opened app with rofi window mode

--- a/UserConfigs/UserKeybinds.conf
+++ b/UserConfigs/UserKeybinds.conf
@@ -46,6 +46,7 @@ bind = $mainMod, bracketright, movefocus, r
 #bind = $mod SHIFT, right, movetoworkspacesilent, +1
 
 bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # calculator (qalculate)
+bind = $mainMod , T, exec, rofi -show window # calculator (qalculate)
 
 # pyprland
 bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
