feat: Alt+Tab to switch between windows on current workspace or Alt+Shift+Tab for inverse order

--- a/configs/Keybinds.conf
+++ b/configs/Keybinds.conf
@@ -29,7 +29,8 @@ bind = $mainMod SHIFT, B, exec, $scriptsDir/ChangeBlur.sh # Toggle blur settings
 bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # animations ON/OFF
 bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Toggle Master or Dwindle Layout
 bind = $mainMod ,V, exec, $scriptsDir/ClipManager.sh # Clipboard Manager
-bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
+#bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
+bind = $mainMod , N, exec, swaync-client -t -sw # swayNC panel
 
 # FEATURES / EXTRAS (UserScripts)
 bind = $mainMod, Y, exec, $UserScripts/QuickEdit.sh # Quick Edit Hyprland Settings
@@ -57,8 +58,13 @@ bind = $mainMod, G, togglegroup
 bind = $mainMod SHIFT, tab, changegroupactive  #change focus to another window
 
  # Cycle windows if floating bring to top
-bind = ALT,Tab,cyclenext
+#bind = ALT,Tab,cyclenext
+bind = ALT,Tab,cyclenext, prev
 bind = ALT,Tab,bringactivetotop
+
+#bind = SHIFT ALT,Tab,cyclenext , prev
+bind = SHIFT ALT,Tab,cyclenext
+bind = SHIFT ALT,Tab,bringactivetotop
 
 # Special Keys / Hot Keys
 bindel = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc #volume up
