feat: use ianny instead of unstale safeeyes for RSIbreak, add swaylock and ianny prebuilt x64 elf for fast deployment

--- a/UserConfigs/Startup_Apps.conf
+++ b/UserConfigs/Startup_Apps.conf
@@ -51,5 +51,6 @@ exec-once = hypridle &
 
 # For the input method
 exec-once = fcitx5 -d
-exec-once = safeeye
+#exec-once = safeeyes
+exec-once = ianny
 exec-once = $HOME/SW/Clash.for.Windows-0.20.8-x64-linux/cfw --no-sandbox
