feat: add Win+Ctrl+,/. to move current workspace to left/right monitor

--- a/UserConfigs/UserKeybinds.conf
+++ b/UserConfigs/UserKeybinds.conf
@@ -48,6 +48,12 @@ bind = $mainMod, bracketright, movefocus, r
 bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # calculator (qalculate)
 bind = $mainMod , T, exec, rofi -show window # calculator (qalculate)
 
+# Win + Ctrl + , to switch current active workspace to other monitor(left), will auto change focus to it
+bind = $mainMod CTRL, comma, movecurrentworkspacetomonitor, l #mon:-1 # -1 # calculator (qalculate)
+
+# Win + Ctrl + . to switch current active workspace to other monitor(right), will auto change focus to it
+bind = $mainMod CTRL, period, movecurrentworkspacetomonitor, r
+
 # pyprland
 bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal
 bind = $mainMod, Z, exec, pypr zoom # Toggle Zoom
