feat: add Win+H/I/O to switch to previous workspace

--- a/configs/Keybinds.conf
+++ b/configs/Keybinds.conf
@@ -21,7 +21,7 @@ bind = $mainMod, L, exec, $scriptsDir/LockScreen.sh
 bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh
 
 # FEATURES / EXTRAS
-bind = $mainMod, H, exec, $scriptsDir/KeyHints.sh # Small help file
+bind = $mainMod ALT, H, exec, $scriptsDir/KeyHints.sh # Small help file
 bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh # Refresh waybar, swaync, rofi
 bind = $mainMod ALT, E, exec, $scriptsDir/RofiEmoji.sh # emoji
 bind = $mainMod, S, exec, $scriptsDir/RofiSearch.sh # Google search from Rofi
@@ -143,6 +143,10 @@ bind = $mainMod, code:16, workspace, 7
 bind = $mainMod, code:17, workspace, 8
 bind = $mainMod, code:18, workspace, 9
 bind = $mainMod, code:19, workspace, 10
+
+bind = $mainMod, H, workspace, previous
+bind = $mainMod, O, workspace, previous
+bind = $mainMod, I, workspace, previous
 
 # Move active window and follow to workspace mainMod + SHIFT [0-9]
 bind = $mainMod SHIFT, code:10, movetoworkspace, 1
