feat: let HDMI screen on the left, laptop screen on the right

--- a/UserConfigs/Monitors.conf
+++ b/UserConfigs/Monitors.conf
@@ -9,15 +9,34 @@
 # Monitors
 monitor=,preferred,auto,1
 
+#eDP-1
 # NOTE: for laptop, kindly check notes in Laptops.conf regarding display
 # Created this inorder for the monitor display to not wake up if not intended.
 # See here: https://github.com/hyprwm/Hyprland/issues/4090
+#
+# Monitors are positioned on a virtual “layout”. The position is the position of said display in the layout. (calculated from the top-left corner)
 
-#monitor = eDP-1, preferred, auto, 1
+#For example:
+#monitor=DP-1, 1920x1080, 0x0, 1
+#monitor=DP-2, 1920x1080, 1920x0, 1
+#Explain
+#
+#will tell hyprland to make DP-1 on the left of DP-2, while
+#monitor=DP-1, 1920x1080, 1920x0, 1
+#monitor=DP-2, 1920x1080, 0x0, 1
+#Explain
+#
+#will tell hyprland to make DP-1 on the right.
+
+
+# Let HDMI on Left, Laptop screen on right
+#monitor = eDP-1, 1920x1080, 1920x0, 1
+monitor = eDP-1, preferred, 1920x0, 1
+monitor = HDMI-A-1, preferred,0x0,1
+
 #monitor = eDP-1, 2560x1440@165, 0x0, 1 #own screen
 #monitor = DP-3, 1920x1080@240, auto, 1 
 #monitor = DP-1, preferred, auto, 1
-#monitor = HDMI-A-1, preferred,auto,1
 
 # QEMU-KVM or any virtual box
 #monitor = Virtual-1, 1920x1080@60,auto,1
